[tool.poetry]
name = "fastapicomponents"
version = "0.1.1"
description = "Modular, reusable FastAPI components for scalable backend development."
authors = ["Qasim <your-email@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "fastapicomponents" }]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
pydantic = "^2.9.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"



[dependency-groups]
dev = [
    "pytest (>=8.4.2,<9.0.0)"
]
